add 13v2 pandas ipynb

--- a/13_Основы парсинга и работы с API/13_Основы парсинга и работы с API.ipynb
+++ b/13_Основы парсинга и работы с API/13_Основы парсинга и работы с API.ipynb
@@ -15,7 +15,6 @@
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "import time\n",
     "from bs4 import BeautifulSoup"
    ]
   },
@@ -117,6 +116,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2021-02-14T13:13:19+03:00</td>\n",
+       "      <td>Как перестать беспокоиться и начать жить</td>\n",
+       "      <td>https://habr.com/ru/post/542326/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>2021-02-13T21:31:19+03:00</td>\n",
        "      <td>7 полезных расширений VS Code для Python-разра...</td>\n",
        "      <td>https://habr.com/ru/company/timeweb/blog/542286/</td>\n",
@@ -127,13 +132,16 @@
       ],
       "text/plain": [
        "                        date  \\\n",
-       "0  2021-02-13T21:31:19+03:00   \n",
+       "0  2021-02-14T13:13:19+03:00   \n",
+       "1  2021-02-13T21:31:19+03:00   \n",
        "\n",
        "                                               title  \\\n",
-       "0  7 полезных расширений VS Code для Python-разра...   \n",
+       "0           Как перестать беспокоиться и начать жить   \n",
+       "1  7 полезных расширений VS Code для Python-разра...   \n",
        "\n",
        "                                               link  \n",
-       "0  https://habr.com/ru/company/timeweb/blog/542286/  "
+       "0                  https://habr.com/ru/post/542326/  \n",
+       "1  https://habr.com/ru/company/timeweb/blog/542286/  "
       ]
      },
      "execution_count": 4,
@@ -224,13 +232,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2021-02-14T13:13:19+03:00</td>\n",
+       "      <td>Как перестать беспокоиться и начать жить</td>\n",
+       "      <td>https://habr.com/ru/post/542326/</td>\n",
+       "      <td>Мониторинг работы организации с помощью докера...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>2021-02-13T22:11:09+03:00</td>\n",
        "      <td>Инструменты для участников соревнований по маш...</td>\n",
        "      <td>https://habr.com/ru/post/542292/</td>\n",
        "      <td>Соревнования по машинному обучению — относител...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>2021-02-13T21:31:19+03:00</td>\n",
        "      <td>7 полезных расширений VS Code для Python-разра...</td>\n",
        "      <td>https://habr.com/ru/company/timeweb/blog/542286/</td>\n",
@@ -242,20 +257,24 @@
       ],
       "text/plain": [
        "                        date  \\\n",
-       "0  2021-02-13T22:11:09+03:00   \n",
-       "1  2021-02-13T21:31:19+03:00   \n",
+       "0  2021-02-14T13:13:19+03:00   \n",
+       "1  2021-02-13T22:11:09+03:00   \n",
+       "2  2021-02-13T21:31:19+03:00   \n",
        "\n",
        "                                               title  \\\n",
-       "0  Инструменты для участников соревнований по маш...   \n",
-       "1  7 полезных расширений VS Code для Python-разра...   \n",
+       "0           Как перестать беспокоиться и начать жить   \n",
+       "1  Инструменты для участников соревнований по маш...   \n",
+       "2  7 полезных расширений VS Code для Python-разра...   \n",
        "\n",
        "                                               link  \\\n",
-       "0                  https://habr.com/ru/post/542292/   \n",
-       "1  https://habr.com/ru/company/timeweb/blog/542286/   \n",
+       "0                  https://habr.com/ru/post/542326/   \n",
+       "1                  https://habr.com/ru/post/542292/   \n",
+       "2  https://habr.com/ru/company/timeweb/blog/542286/   \n",
        "\n",
        "                                                text  \n",
-       "0  Соревнования по машинному обучению — относител...  \n",
-       "1  Наиболее важные и полезные расширения VS Code ...  "
+       "0  Мониторинг работы организации с помощью докера...  \n",
+       "1  Соревнования по машинному обучению — относител...  \n",
+       "2  Наиболее важные и полезные расширения VS Code ...  "
       ]
      },
      "execution_count": 6,
@@ -301,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -618,42 +637,13 @@
        "26  Youku is a large Chinese video content company...  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "check_emails_hacks_by_avast(EMAIL)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\"><h3>Дополнительная часть</h3></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Написать скрипт, который будет получать 50 последних постов указанной группы во Вконтакте.  \n",
-    "Документация к API VK: https://vk.com/dev/methods , вам поможет метод https://vk.com/dev/wall.get\n",
-    "\n",
-    "GROUP = 'netology'  \n",
-    "TOKEN = УДАЛЯЙТЕ В ВЕРСИИ ДЛЯ ПРОВЕРКИ, НА GITHUB НЕ ВЫКЛАДЫВАТЬ\n",
-    "\n",
-    "В итоге должен формироваться датафрейм со столбцами: дата поста - текст поста"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# coming soon"
    ]
   }
  ],
