add art_hours_korr2 ipynb

--- a/art_hours/art_hours.ipynb
+++ b/art_hours/art_hours.ipynb
@@ -1109,7 +1109,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x233a2d71ac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a487afe5c0>"
       ]
      },
      "execution_count": 19,
@@ -1457,7 +1457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Добавим столбец **'spec_workload'**, вычислив отноение количества часов к максимально возможному:"
+    "Добавим столбец **'workload'**, вычислив отношение количества часов к максимально возможному:"
    ]
   },
   {
@@ -1466,7 +1466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_workload['spec_workload'] = spec_workload['hours_cleared'] / (spec_workload['executive_id'] * 8)"
+    "spec_workload['workload'] = spec_workload['hours_cleared'] / (spec_workload['executive_id'] * 8)"
    ]
   },
   {
@@ -1499,7 +1499,7 @@
        "      <th>spec</th>\n",
        "      <th>hours_cleared</th>\n",
        "      <th>executive_id</th>\n",
-       "      <th>spec_workload</th>\n",
+       "      <th>workload</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1548,12 +1548,12 @@
        "</div>"
       ],
       "text/plain": [
-       "          day                spec  hours_cleared  executive_id  spec_workload\n",
-       "1  2019-01-09          архитектор             16             2       1.000000\n",
-       "2  2019-01-09         бета-тестер              4             1       0.500000\n",
-       "3  2019-01-09         верстальщик             22             5       0.550000\n",
-       "4  2019-01-09  главный архитектор              4             1       0.500000\n",
-       "5  2019-01-09            дизайнер            241            37       0.814189"
+       "          day                spec  hours_cleared  executive_id  workload\n",
+       "1  2019-01-09          архитектор             16             2  1.000000\n",
+       "2  2019-01-09         бета-тестер              4             1  0.500000\n",
+       "3  2019-01-09         верстальщик             22             5  0.550000\n",
+       "4  2019-01-09  главный архитектор              4             1  0.500000\n",
+       "5  2019-01-09            дизайнер            241            37  0.814189"
       ]
      },
      "execution_count": 27,
@@ -1671,7 +1671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_workload['spec_workload'] = all_workload['hours_cleared'] / (all_workload['executive_id'] * 8)"
+    "all_workload['workload'] = all_workload['hours_cleared'] / (all_workload['executive_id'] * 8)"
    ]
   },
   {
@@ -1703,7 +1703,7 @@
        "      <th>day</th>\n",
        "      <th>hours_cleared</th>\n",
        "      <th>executive_id</th>\n",
-       "      <th>spec_workload</th>\n",
+       "      <th>workload</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1747,12 +1747,12 @@
        "</div>"
       ],
       "text/plain": [
-       "          day  hours_cleared  executive_id  spec_workload\n",
-       "0  2019-01-07              4             1       0.500000\n",
-       "1  2019-01-09            451            71       0.794014\n",
-       "2  2019-01-10            441            70       0.787500\n",
-       "3  2019-01-11            470            73       0.804795\n",
-       "4  2019-01-14            504            77       0.818182"
+       "          day  hours_cleared  executive_id  workload\n",
+       "0  2019-01-07              4             1  0.500000\n",
+       "1  2019-01-09            451            71  0.794014\n",
+       "2  2019-01-10            441            70  0.787500\n",
+       "3  2019-01-11            470            73  0.804795\n",
+       "4  2019-01-14            504            77  0.818182"
       ]
      },
      "execution_count": 31,
@@ -1779,7 +1779,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x233a344ea20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a4881ef7f0>"
       ]
      },
      "execution_count": 32,
@@ -1800,7 +1800,7 @@
     }
    ],
    "source": [
-    "(spec_workload.query(\"spec == 'дизайнер'\").reset_index().spec_workload\n",
+    "(spec_workload.query(\"spec == 'дизайнер'\").reset_index().workload\n",
     "              .plot(kind='area', \n",
     "                    stacked=False, \n",
     "                    title='Динамика занятости дизайнеров в течение года', \n",
@@ -1815,7 +1815,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x233a348b0f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a48824ec88>"
       ]
      },
      "execution_count": 33,
@@ -1836,7 +1836,7 @@
     }
    ],
    "source": [
-    "(spec_workload.query(\"spec == 'технолог'\").reset_index().spec_workload\n",
+    "(spec_workload.query(\"spec == 'технолог'\").reset_index().workload\n",
     "              .plot(kind='area', \n",
     "                    stacked=False, \n",
     "                    title='Динамика занятости технологов в течение года', \n",
@@ -1851,7 +1851,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x233a34ac3c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a48824e898>"
       ]
      },
      "execution_count": 34,
@@ -1872,7 +1872,7 @@
     }
    ],
    "source": [
-    "(all_workload.spec_workload.plot(kind='area', \n",
+    "(all_workload.workload.plot(kind='area', \n",
     "                                 stacked=False, \n",
     "                                 title='Динамика общей занятости в течение года', \n",
     "                                 xticks=range(1, 249, 22)))"
@@ -1914,7 +1914,7 @@
        "      <th>day</th>\n",
        "      <th>hours_cleared</th>\n",
        "      <th>executive_id</th>\n",
-       "      <th>spec_workload</th>\n",
+       "      <th>workload</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1958,12 +1958,12 @@
        "</div>"
       ],
       "text/plain": [
-       "            day  hours_cleared  executive_id  spec_workload\n",
-       "64   2019-04-06              3             1          0.375\n",
-       "0    2019-01-07              4             1          0.500\n",
-       "242  2019-12-15              4             1          0.500\n",
-       "241  2019-12-14              4             1          0.500\n",
-       "107  2019-06-12             16             4          0.500"
+       "            day  hours_cleared  executive_id  workload\n",
+       "64   2019-04-06              3             1     0.375\n",
+       "0    2019-01-07              4             1     0.500\n",
+       "242  2019-12-15              4             1     0.500\n",
+       "241  2019-12-14              4             1     0.500\n",
+       "107  2019-06-12             16             4     0.500"
       ]
      },
      "execution_count": 35,
@@ -1972,7 +1972,7 @@
     }
    ],
    "source": [
-    "all_workload.sort_values(by='spec_workload').head()"
+    "all_workload.sort_values(by='workload').head()"
    ]
   },
   {
@@ -2005,7 +2005,7 @@
        "      <th>spec</th>\n",
        "      <th>hours_cleared</th>\n",
        "      <th>executive_id</th>\n",
-       "      <th>spec_workload</th>\n",
+       "      <th>workload</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2038,10 +2038,10 @@
        "</div>"
       ],
       "text/plain": [
-       "             day       spec  hours_cleared  executive_id  spec_workload\n",
-       "0     2019-01-07   дизайнер              4             1          0.500\n",
-       "1043  2019-04-06   фотограф              3             1          0.375\n",
-       "3915  2019-12-15  корректор              4             1          0.500"
+       "             day       spec  hours_cleared  executive_id  workload\n",
+       "0     2019-01-07   дизайнер              4             1     0.500\n",
+       "1043  2019-04-06   фотограф              3             1     0.375\n",
+       "3915  2019-12-15  корректор              4             1     0.500"
       ]
      },
      "execution_count": 36,
